<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/naofood_icon_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >

        <TextView
            android:id="@+id/search_textView_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyword"
            app:layout_column="0"
            app:layout_row="0" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/optional"
            android:inputType="text"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/search_textView_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/search_spinner_type"
            android:layout_width="300dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/search_textView_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/number" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="16dp">

            <SeekBar
                android:id="@+id/search_seekBar_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/search_seekBar_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="0"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/search_button"
        app:layout_constraintEnd_toEndOf="@+id/gridLayout"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <Button
        android:id="@+id/random_button"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:text="@string/random_recipe"
        app:layout_constraintEnd_toEndOf="@+id/search_button"
        app:layout_constraintStart_toStartOf="@+id/gridLayout"
        app:layout_constraintTop_toBottomOf="@+id/search_button" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fragment_container"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>